--- a/views/edit_book.html.twig
+++ b/views/edit_book.html.twig
@@ -13,7 +13,7 @@
         {*% endif %} -->
 
         <h2>Edit Book</h2>
-        <form action="/edit_book" name="edit_book" method="post">
+        <form action="/edit_book/{{ book.getId }}" name="edit_book" method="post">
             <input name="_method" type="hidden" value="patch">
 
             <label for="title">New Title: </label>
