place home link on edit_book template

--- a/views/edit_book.html.twig
+++ b/views/edit_book.html.twig
@@ -21,6 +21,6 @@
 
             <button type="submit" name="button">Update Book</button>
         </form>
-
+    <p><a href="/">Home</a></p>
     </body>
 </html>
