--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -13,6 +13,14 @@
             <button type="submit" name="button">Add Book</button>
         </form>
 
+        <h2>Add An Author</h2>
+        <form action="/add_author" name="add_author" method="post">
+            <label for="name">Add An Author: </label>
+            <input type="name" name="name" type="text" required>
+
+            <button type="submit" name="button">Add Author</button>
+        </form>
+
         <h2>Catalog | View All Books</h2>
         {% if all_books is not empty %}
             {% for book in all_books %}
