update edit_book template

--- a/views/edit_book.html.twig
+++ b/views/edit_book.html.twig
@@ -1,9 +1,9 @@
 <html>
     <head>
-        <title>Midtown Public Library | Home</title>
+        <title>Midtown Public Library | Edit Book</title>
     </head>
     <body>
-        <h1>Midtown Public Library</h1>
+        <h1>Midtown Public Library | Edit Book</h1>
 
         <h2>{{ book.getTitle }}</h2>
         <!-- {*% if all_books is not empty %}
