--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -28,8 +28,8 @@
                     <div class="col-md-6">
                         <h2>Add An Author</h2>
                         <form action="/add_author" name="add_author" method="post">
-                            <label for="name">Add An Author: </label>
-                            <input type="name" name="name" type="text" required>
+                            <label for="author_name">Add An Author: </label>
+                            <input type="author_name" name="author_name" type="text" required>
 
                             <button type="submit" name="button">Add Author</button>
                         </form>
