change variable names in edit_author.html.twig /assign_book form

--- a/views/edit_author.html.twig
+++ b/views/edit_author.html.twig
@@ -23,9 +23,9 @@
         </form>
 
         <h2>Assign A Book To An Author</h2> <!-- needs to be dropdown menu -->
-        <form action="/assign_author" name="assign_author" method="post">
-            <label for="author_name">Add A Book: </label>
-            <input type="author_name" name="author_name" type="text" required>
+        <form action="/assign_book" name="assign_book" method="post">
+            <label for="title">Add A Book: </label>
+            <input type="title" name="title" type="text" required>
 
             <button type="submit" name="button">Add Book</button>
         </form>
