change old index.html.twig to librarian.html.twig

--- a/views/librarian.html.twig
+++ b/views/librarian.html.twig
@@ -1,13 +1,13 @@
 <html>
     <head>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <title>Midtown Public Library | Home</title>
+        <title>Midtown Public Library | Librarian</title>
     </head>
     <body>
         <div class="container-fluid">
             <div class="container main">
                 <div class="row">
-                    <h1>Welcome to Midtown Public Library! | Catalog</h1>
+                    <h1>Midtown Public Library | Catalog</h1>
                     <div class="col-md-6">
                         <form id="search_by_title" action="/search_by_title" method="post">
                             <label for="book_title">Find A Book By Title: </label>
