--- a/views/patron.html.twig
+++ b/views/patron.html.twig
@@ -26,6 +26,8 @@
                             <p><a href="/edit_book/{{ book.getId }}">{{ book.getTitle }}</a></p>
                         {% endfor %}
                     {% endif %}
+
+                    <p><a href="/">Home</a></p>
                     </div>
                 </div>
             </div>
