--- a/views/patrons.html.twig
+++ b/views/patrons.html.twig
@@ -23,6 +23,8 @@
                             <p><a href="/patron/{{ patron.getId }}">{{ patron.getPatronName }}</a></p>
                         {% endfor %}
                     {% endif %}
+
+                    <p><a href="/">Home</a></p>
                     </div>
                 </div>
             </div>
