--- a/views/librarian.html.twig
+++ b/views/librarian.html.twig
@@ -53,6 +53,8 @@
                                 <p><a href="/edit_author/{{ author.getId }}">{{ author.getAuthorName }}</a></p>
                             {% endfor %}
                         {% endif %}
+
+                        <p><a href="/">Home</a></p>
                     </div>
                 </div>
             </div>
